# financial-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: agent.py  answer_parsing.py  cli.py  code_execution.py  config.py  langfuse_client.py  llm_client.py  llm_messages_utils.py  llm_utils.py  main.py  observability.py  prompt.py  schema.py  system_prompt.py  utils.py
app/api/: celery_app.py  redis_store.py  routes.py  schemas.py  tasks.py
app/code_tool/: execute_code.py  utils.py
app/documents_preprocessing/: cli.py  docling_converter.py  make_markdown.py  prompt.py  schema.py
app/image_question_answering_tool/: answer.py
app/main_agent/: history.py  main.py  parse.py  run.py  system_prompt.py  test.py
app/web/: app.js  index.html  styles.css
